# Passy

./: README.md
client/: index.html  package-lock.json  package.json  tailwind.config.js
client/src/: App.tsx  Header.tsx  LoginDialog.tsx  PasswordEdit.tsx  PluginDialog.tsx  Sidebar.tsx  UserSelector.tsx  styles.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: appdata.rs  crypto.rs  error.rs  main.rs  password.rs  plugin.rs  user.rs
client/src/types/: index.ts
mobile/: app.json  package-lock.json  package.json
plugin_maker/rust/: Cargo.toml
plugin_maker/rust/src/: lib.rs
plugins/genshin_account_switcher/: Cargo.toml
plugins/genshin_account_switcher/src/: lib.rs
